clean up transaction usage in all model classes